--- a/BlogProject/Views/BlogPosts/Details.cshtml
+++ b/BlogProject/Views/BlogPosts/Details.cshtml
@@ -32,27 +32,31 @@
                 <div class="post-content blogOverflow">
                     @Html.Raw(Model.body)
                 </div>
+                <hr />
+                @*<div class="media">*@
+                    @foreach (var item in Model.comments)
+                    {
+                        <div class="media-body">
+                            <h4 class="media-heading">
+                                @item.author.displayName
+                            </h4>
+                            <p class="text-muted">
+                                @item.created
+                            </p>
+                            <p>
+                               @item.body
+                            </p>
+                        </div>
+                        <br />
+                    }
+                @*</div>*@
+                <hr />
                 <div class="post-comment">
-                    <h3>Leave a Reply</h3>
-                    <form role="form" class="form-horizontal">
-                        <div class="form-group">
-                            <div class="col-lg-6">
-                                <input type="text" class="col-lg-12 form-control" placeholder="Name">
-                            </div>
-                        </div>
-                        <div class="form-group">
-                            <div class="col-lg-12">
-                                <textarea class=" form-control" rows="8" placeholder="Message"></textarea>
-                            </div>
-                        </div>
-                        <p>
-                        </p>
-                        <p>
-                            <button class="btn btn-send" type="submit">Comment</button>
-                        </p>
-
-                        <p></p>
-                    </form>
+                    @using (Html.BeginForm())
+                    {
+                        @Html.HiddenFor(b => b.id);
+                        @Html.Action("Create", "Comments")
+                    }
                 </div>
             </div>
         </div>
@@ -65,7 +69,6 @@
         @Html.ActionLink("Back to List", "Index")
     </p>
 }
-
 
 
 
