--- a/BlogProject/Views/Home/Index.cshtml
+++ b/BlogProject/Views/Home/Index.cshtml
@@ -7,16 +7,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h2>Blog with right sidebar</h2>
-                    <ol class="breadcrumb">
-                        <li>
-                            <a href="index.html">
-                                <i class="ion-ios-home"></i>
-                                Home
-                            </a>
-                        </li>
-                        <li class="active">Blog</li>
-                    </ol>
+                    <h2>Welcome To Johns BlogSpot</h2>
                 </div>
             </div>
         </div>
@@ -24,131 +15,25 @@
 </section>
 
 
-<section id="blog-full-width">
+<section id="hero-area">
     <div class="container">
         <div class="row">
-            <div class="col-md-8">
-                <article class="wow fadeInDown" data-wow-delay=".3s" data-wow-duration="500ms">
-                    <div class="blog-post-image">
-                        <a href="post-fullwidth.html"><img class="img-responsive" src="~/images/blog/post-1.jpg" alt="" /></a>
-                    </div>
-                    <div class="blog-content">
-                        <h2 class="blogpost-title">
-                            <a href="post-fullwidth.html">Space shouldn’t be the final frontier</a>
-                        </h2>
-                        <div class="blog-meta">
-                            <span>Dec 11, 2020</span>
-                            <span>by <a href="">Admin</a></span>
-                            <span><a href="">business</a>,<a href="">people</a></span>
-                        </div>
-                        <p>
-                            Ultrices posuere cubilia curae curabitur sit amet tortor ut massa commodo. Vestibulum consectetur euismod malesuada tincidunt cum. Sed ullamcorper dignissim consectetur ut tincidunt eros sed sapien consectetur dictum. Pellentesques sed volutpat ante, cursus port. Praesent mi magna, penatibus et magniseget dis parturient montes sed quia consequuntur magni dolores eos qui ratione.
-                        </p>
-                        <a href="single-post.html" class="btn btn-dafault btn-details">Continue Reading</a>
-                    </div>
-
-                </article>
-                <article class="wow fadeInDown" data-wow-delay=".5s" data-wow-duration="500ms">
-                    <div class="blog-post-image">
-                        <a href="post-fullwidth.html"><img class="img-responsive" src="~/images/blog/post-2.jpg" alt="" /></a>
-                    </div>
-                    <div class="blog-content">
-                        <h2 class="blogpost-title">
-                            <a href="post-fullwidth.html">Space shouldn’t be the final frontier</a>
-                        </h2>
-                        <div class="blog-meta">
-                            <span>Dec 11, 2020</span>
-                            <span>by <a href="">Admin</a></span>
-                            <span><a href="">business</a>,<a href="">people</a></span>
-                        </div>
-                        <p>
-                            Ultrices posuere cubilia curae curabitur sit amet tortor ut massa commodo. Vestibulum consectetur euismod malesuada tincidunt cum. Sed ullamcorper dignissim consectetur ut tincidunt eros sed sapien consectetur dictum. Pellentesques sed volutpat ante, cursus port. Praesent mi magna, penatibus et magniseget dis parturient montes sed quia consequuntur magni dolores eos qui ratione.
-                        </p>
-                        <a href="single-post.html" class="btn btn-dafault btn-details">Continue Reading</a>
-                    </div>
-
-                </article>
-                <article class="wow fadeInDown" data-wow-delay=".7s" data-wow-duration="500ms">
-                    <div class="blog-post-image">
-                        <a href="post-fullwidth.html"><img class="img-responsive" src="~/images/blog/post-3.jpg" alt="" /></a>
-                    </div>
-                    <div class="blog-content">
-                        <h2 class="blogpost-title">
-                            <a href="post-fullwidth.html">Space shouldn’t be the final frontier</a>
-                        </h2>
-                        <div class="blog-meta">
-                            <span>Dec 11, 2020</span>
-                            <span>by <a href="">Admin</a></span>
-                            <span><a href="">business</a>,<a href="">people</a></span>
-                        </div>
-                        <p>
-                            Ultrices posuere cubilia curae curabitur sit amet tortor ut massa commodo. Vestibulum consectetur euismod malesuada tincidunt cum. Sed ullamcorper dignissim consectetur ut tincidunt eros sed sapien consectetur dictum. Pellentesques sed volutpat ante, cursus port. Praesent mi magna, penatibus et magniseget dis parturient montes sed quia consequuntur magni dolores eos qui ratione.
-                        </p>
-                        <a href="single-post.html" class="btn btn-dafault btn-details">Continue Reading</a>
-                    </div>
-
-                </article>
-            </div>
-            <!-- Sidebar -->
-            <div class="col-md-4">
-                <div class="sidebar">
-                    <div class="search widget">
-                        <form action="" method="get" class="searchform" role="search">
-                            <div class="input-group">
-                                <input type="text" class="form-control" placeholder="Search for...">
-                                <span class="input-group-btn">
-                                    <button class="btn btn-default" type="button"> <i class="ion-search"></i> </button>
-                                </span>
-                            </div><!-- /input-group -->
-                        </form>
-                    </div>
-                    <div class="author widget">
-                        <img class="img-responsive" src="images/author/author-bg.jpg">
-                        <div class="author-body text-center">
-                            <div class="author-img">
-                                <img src="~/images/author/author.jpg">
-                            </div>
-                            <div class="author-bio">
-                                <h3>Jonathon Andrew</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt magnam asperiores consectetur, corporis ullam impedit.</p>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="recent-post widget">
-                        <h3>Recent Posts</h3>
-
-                        <ul>
-                            <li>
-                                <a href="#">Corporate meeting turns into a photoshooting.</a><br>
-                                <time>16 May, 2015</time>
-                            </li>
-                            <li>
-                                <a href="#">Statistics,analysis. The key to succes.</a><br>
-                                <time>15 May, 2015</time>
-                            </li>
-                            <li>
-                                <a href="#">Blog post without image, only text.</a><br>
-                                <time>14 May, 2015</time>
-                            </li>
-                            <li>
-                                <a href="#">Blog post with audio player. Share your creations.</a><br>
-                                <time>14 May, 2015</time>
-                            </li>
-                            <li>
-                                <a href="#">Blog post with classic Youtbube player.</a><br>
-                                <time>12 May, 2015</time>
-                            </li>
-                        </ul>
-
-                    </div>
-
+            <div class="col-md-12 text-center">
+                <div class="block wow fadeInUp" data-wow-delay=".3s">
+                    <!-- Slider -->
+                    <section class="cd-intro">
+                        <h1 class="wow fadeInUp animated cd-headline slide" data-wow-delay=".4s">
+                            <span>HI, MY NAME IS JOHN & I AM A</span><br>
+                            <span class="cd-words-wrapper">
+                                <b class="is-visible">DESIGNER</b>
+                                <b>DEVELOPER</b>
+                                <b>BLOGGER</b>
+                            </span>
+                        </h1>
+                    </section> <!-- cd-intro -->
+                    <!-- /.slider -->
                 </div>
             </div>
         </div>
     </div>
 </section>
-
-@section scripts{
-
-}
