--- a/BlogProject/Views/BlogPosts/Details.cshtml
+++ b/BlogProject/Views/BlogPosts/Details.cshtml
@@ -82,18 +82,16 @@
         $('#btnSendComment').click(function(){
 
             $.ajax({
-
                 url: '@Url.Action("Create", "Comments")',
-                type:"GET",
+                type:"POST",
                 dataType: "html",
-                //data: { id: 1 },//this is as per your requirement
                 success: function (data) {
                     $('#testTap').html(data);
                 },
             });
         });
     </script>
-    }
+}
 
 
 
