--- a/BlogProject/Views/BlogPosts/Details.cshtml
+++ b/BlogProject/Views/BlogPosts/Details.cshtml
@@ -36,17 +36,26 @@
                 @*<div class="media">*@
                     @foreach (var item in Model.comments)
                     {
-                        <div class="media-body">
-                            <h4 class="media-heading">
-                                @item.author.displayName
-                            </h4>
-                            <p class="text-muted">
-                                @item.created
-                            </p>
-                            <p>
-                               @item.body
-                            </p>
-                        </div>
+                <div class="media-body">
+                    <h4 class="media-heading">
+                        @item.author.displayName
+                    </h4>
+                    <p class="text-muted">
+                        @item.created
+                    </p>
+                    <p>
+                        @item.body
+                    </p>
+                    @if (User.IsInRole("Admin") || User.IsInRole("Mod"))
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.id })
+                        @Html.ActionLink("Delete", "Delete", new { id = item.id })
+                    }
+                    else
+                    {
+
+                    }
+                </div>
                         <br />
                     }
                 @*</div>*@
@@ -56,13 +65,6 @@
                     {
                         @Html.HiddenFor(b => b.id);
                         @Html.Action("Create", "Comments")
-                        <div class="form-group">
-                            <div class="col-md-12 ridOfLeft">
-                                <div class="blog-content">
-                                    <button class="btn btn-dafault btn-details" id="btnSendComment" type="submit">Comment</button>
-                                </div>
-                            </div>
-                        </div>
                     }
                 </div>
             </div>
@@ -82,7 +84,7 @@
         $('#btnSendComment').click(function(){
 
             $.ajax({
-                url: '@Url.Action("Create", "Comments")',
+                url: '@Url.Action("Details", "BlogPosts", new { slug = Model.slug })',
                 type:"POST",
                 dataType: "html",
                 success: function (data) {
