--- a/BlogProject/Views/BlogPosts/Edit.cshtml
+++ b/BlogProject/Views/BlogPosts/Edit.cshtml
@@ -37,6 +37,14 @@
         </div>
 
         <div class="form-group">
+            @Html.LabelFor(model => model.abstractBody, "Summary ", htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.abstractBody, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.abstractBody, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.body, "Body: ", htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.TextAreaFor(model => model.body, new { id = "summernote", name = "editordata", htmlAttributes = new { @class = "form-control" } })
@@ -47,7 +55,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.mediaURL, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                <input name ="image" type="file" class="form-control" id="fileUpload" />
+                <input name="image" type="file" class="form-control" id="fileUpload" />
                 @Html.ValidationMessageFor(model => model.mediaURL, "", new { @class = "text-danger" })
             </div>
         </div>
