--- a/BlogProject/Views/Manage/Index.cshtml
+++ b/BlogProject/Views/Manage/Index.cshtml
@@ -3,11 +3,19 @@
     ViewBag.Title = "Manage";
 }
 
-<h2>@ViewBag.Title.</h2>
+<section class="global-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h2>Manage Your Profile</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
-<p class="text-success">@ViewBag.StatusMessage</p>
-<div>
-    <h4>Change your account settings</h4>
+<div class="container">
     <hr />
     <dl class="dl-horizontal">
         <dt>Password:</dt>
