--- a/BlogProject/Views/Manage/SetPassword.cshtml
+++ b/BlogProject/Views/Manage/SetPassword.cshtml
@@ -3,7 +3,19 @@
     ViewBag.Title = "Create Password";
 }
 
-<h2>@ViewBag.Title.</h2>
+
+<section class="global-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h2>Set Password</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <p class="text-info">
     You do not have a local username/password for this site. Add a local
     account so you can log in without an external login.
