--- a/BlogProject/Views/BlogPosts/Index.cshtml
+++ b/BlogProject/Views/BlogPosts/Index.cshtml
@@ -75,21 +75,12 @@
                 <div class="categories widget">
                     <h3 class="widget-head">Categories</h3>
                     <ul>
-                        <li>
-                            <a href="@Url.Action("Index", new { sortCat = "IT", currentFilter = ViewBag.CurrentFilter = "" })">IT</a>
-                        </li>
-                        <li>
-                            <a href="@Url.Action("Index", new { sortCat = "Gaming", currentFilter = ViewBag.CurrentFilter = "" })">Gaming</a>
-                        </li>
-                        <li>
-                            <a href="@Url.Action("Index", new { sortCat = "VR/AR", currentFilter = ViewBag.CurrentFilter = "" })">VR/AR</a>
-                        </li>
-                        <li>
-                            <a href="@Url.Action("Index", new { sortCat = "Learning", currentFilter = ViewBag.CurrentFilter = "" })">Learning</a>
-                        </li>
-                        <li>
-                            <a href="@Url.Action("Index", new { sortCat = "Random", currentFilter = ViewBag.CurrentFilter = "" })">Random</a>
-                        </li>
+                        @foreach (var item in ViewBag.CurrentCategories)
+                        {
+                            <li>
+                                <a href="@Url.Action("Index", new { sortCat = @item.categoryName, currentFilter = ViewBag.CurrentFilter = "" })">@item.categoryName</a>
+                            </li>
+                        }
                     </ul>
                     <div class="blog-content text-right">
                         <a class="ridOfTop btn btn-dafault btn-details" href="@Url.Action("Index", new { sortCat = ""})">Clear</a>
