--- a/BlogProject/Views/Account/Login.cshtml
+++ b/BlogProject/Views/Account/Login.cshtml
@@ -44,15 +44,15 @@
                     </div>
                     <div class="form-group">
                         <div class="col-md-offset-2 col-md-10">
-                            <div class="checkbox">
+                            <div class="checkbox pushLeft">
                                 @Html.CheckBoxFor(m => m.RememberMe)
                                 @Html.LabelFor(m => m.RememberMe)
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Log in" class="btn btn-default" />
+                        <div class="col-md-push-5 col-md-pull-2 col-md-3">
+                            <input type="submit" value="Log in" class="btn btn-info sameLength" />
                         </div>
                     </div>
                     <p>
