--- a/BlogProject/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/BlogProject/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -18,7 +18,9 @@
             <div id="socialLoginList">
                 <p>
                     @foreach (AuthenticationDescription p in loginProviders) {
-                        <button type="submit" class="btn btn-info" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                        <button type="submit" class="btn btn-info sameLength" id="@p.AuthenticationType" name="provider" value="@p.AuthenticationType" title="Log in using your @p.Caption account">@p.AuthenticationType</button>
+                        <br />
+                        <br />
                     }
                 </p>
             </div>
