Sweet Alerts ARE THE BEST

--- a/BlogProject/Views/Home/Contact.cshtml
+++ b/BlogProject/Views/Home/Contact.cshtml
@@ -47,3 +47,26 @@
         </div>
     }
 </div>
+
+@section scripts{
+    
+    <script>
+        var check = '@TempData["contactCheck"]';
+        if (check == "Success") {
+            window.onload = function () {
+                swal(
+                    'Thank You!',
+                    "Your Email has been sent I'll respond as soon as I am able to!",
+                    'success'
+                )
+            }
+        }
+        else if (check == "Failure") {
+            swal({
+                type: 'error',
+                title: 'Oops...',
+                text: 'Something went wrong! Your email has not Sent!',
+            })
+        }
+    </script>
+}
