Final Commit Week 2 Day 4

--- a/BlogProject/Views/Account/ConfirmationSent.cshtml
+++ b/BlogProject/Views/Account/ConfirmationSent.cshtml
@@ -1,24 +1,17 @@
-﻿@{
-    ViewBag.Title = "Forgot Password Confirmation";
-}
-
+﻿
 <section class="global-page-header">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="block">
-                    <h2>Check Your Email</h2>
+                    <h2>Resend Email</h2>
+                    <h4>Enter your email.</h4>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<br />
-<br />
-<br />
-<div>
-    <p>
-        Please check your email to reset your password.
-    </p>
+
+<div class="container">
+    <h3>Thanks you for confirming your email!</h3>
 </div>
-	
