Dawn of the Final Day

--- a/BlogProject/Views/Account/ExternalLoginFailure.cshtml
+++ b/BlogProject/Views/Account/ExternalLoginFailure.cshtml
@@ -2,6 +2,18 @@
     ViewBag.Title = "Login Failure";
 }
 
+<section class="global-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h2>Error</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <hgroup>
     <h2>@ViewBag.Title.</h2>
     <h3 class="text-danger">Unsuccessful login with service.</h3>
