--- a/BlogProject/Views/Shared/Error.cshtml
+++ b/BlogProject/Views/Shared/Error.cshtml
@@ -4,6 +4,18 @@
     ViewBag.Title = "Error";
 }
 
+<section class="global-page-header">
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <div class="block">
+                    <h2>Error</h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h2 class="text-danger">An error occurred while processing your request make sure all fields are valid.</h2>
 
