--- a/BlogProject/Views/BlogPosts/Details.cshtml
+++ b/BlogProject/Views/BlogPosts/Details.cshtml
@@ -68,6 +68,7 @@
                 {
                     <div class="media-body">
                         <h4 class="media-heading">
+                            <img src="@item.author.avatar" />
                             @item.author.displayName
                         </h4>
                         <p class="text-muted">
