--- a/BlogProject/Views/Manage/Index.cshtml
+++ b/BlogProject/Views/Manage/Index.cshtml
@@ -38,13 +38,13 @@
         </dd>
         @*
             Phone Numbers can used as a second factor of verification in a two-factor authentication system.
-             
+
              See <a href="https://go.microsoft.com/fwlink/?LinkId=403804">this article</a>
                 for details on setting up this ASP.NET application to support two-factor authentication using SMS.
-             
+
              Uncomment the following block after you have set up two-factor authentication
         *@
-        @*  
+        @*
             <dt>Phone Number:</dt>
             <dd>
                 @(Model.PhoneNumber ?? "None")
@@ -108,3 +108,26 @@
         </dd>
     </dl>
 </div>
+
+
+@section scripts{
+    <script>
+        var check = '@TempData["avatarCheck"]';
+        if (check == "Success") {
+            window.onload = function () {
+                swal(
+                    'Success!',
+                    "Your avatar has been updated!",
+                    'success'
+                )
+            }
+        }
+        else if (check == "Failure") {
+            swal({
+                type: 'error',
+                title: 'Oops...',
+                text: 'Something went wrong! Your avatar was not saved!',
+            })
+        }
+    </script>
+}
