Hopefully Final Blog

--- a/BlogProject/Views/BlogPosts/Details.cshtml
+++ b/BlogProject/Views/BlogPosts/Details.cshtml
@@ -35,6 +35,9 @@
                 <div class="post-content blogOverflow">
                     @Html.Raw(Model.body)
                 </div>
+                <div style="float: right;">
+                    Views: @Model.viewCount
+                </div>
                 <hr />
                 @*<div class="media">*@
                 <div class="post-comment" id="testTap">
