--- a/BlogProject/Content/PagedList.css
+++ b/BlogProject/Content/PagedList.css
@@ -11,6 +11,7 @@
 
 .pagination > li > a,
 .pagination > li > span {
+  color: black;
   position: relative;
   float: left;
   padding: 6px 12px;
@@ -41,28 +42,28 @@
   background-color: #eeeeee;
 }
 
-.pagination > .active > a,
-.pagination > .active > span,
-.pagination > .active > a:hover,
-.pagination > .active > span:hover,
-.pagination > .active > a:focus,
-.pagination > .active > span:focus {
-  z-index: 2;
-  color: #ffffff;
-  cursor: default;
-  background-color: #428bca;
-  border-color: #428bca;
-}
+    .pagination > .active > a,
+    .pagination > .active > span,
+    .pagination > .active > a:hover,
+    .pagination > .active > span:hover,
+    .pagination > .active > a:focus,
+    .pagination > .active > span:focus {
+        z-index: 2;
+        color: white;
+        cursor: default;
+        background-color: #02bdd5;
+        border-color: #fff;
+    }
 
-.pagination > .disabled > span,
-.pagination > .disabled > a,
-.pagination > .disabled > a:hover,
-.pagination > .disabled > a:focus {
-  color: #999999;
-  cursor: not-allowed;
-  background-color: #ffffff;
-  border-color: #dddddd;
-}
+    .pagination > .disabled > span,
+    .pagination > .disabled > a,
+    .pagination > .disabled > a:hover,
+    .pagination > .disabled > a:focus {
+        color: white;
+        cursor: not-allowed;
+        background-color: #02bdd5;
+        border-color: #fff;
+    }
 
 .pagination-lg > li > a,
 .pagination-lg > li > span {
