--- a/BlogProject/Views/BlogPosts/Edit.cshtml
+++ b/BlogProject/Views/BlogPosts/Edit.cshtml
@@ -27,6 +27,7 @@
         @Html.HiddenFor(model => model.created)
         @Html.HiddenFor(model => model.slug)
         @Html.HiddenFor(model => model.mediaURL)
+        @Html.HiddenFor(model => model.viewCount)
 
         <div class="form-group">
             @Html.LabelFor(model => model.title, htmlAttributes: new { @class = "control-label col-md-2" })
